--- a/configuration.properties
+++ b/configuration.properties
@@ -12,16 +12,16 @@ webUniUrl = http://webdriveruniversity.com/IFrame/index.html
 useinUrl = https://useinsider.com
 
 
-toGecerliEmail = wise@gmail.com
-toGecerliPassword = 12345
-toGecersizEmail = denemem@gmail.com
-toGecersizSifre = 11011
+toValidEmail = wise@gmail.com
+toValidPassword = 12345
+toInvalidEmail = denemem@gmail.com
+toInvalidPassword = 11011
 
-toAranacakKelime = phone
-
-
+toAranacakUrun = phone
 
 
+
+u
 
 
 
